# ngramtool

./: INSTALL  Jamfile  Jamrules.in  Makefile  README  aclocal.m4  config.h.in  config.h.in.orig  configure  configure.in
boost/config/: posix_features.hpp
script/: boostheaders.py  dist_bin.sh  fileperm.sh  pre_dist.sh
src/: Jamfile  extractngram.cpp  extractngram.ggo  extractngram_cmdline.c  extractngram_cmdline.h  iconvert.cpp  iconvert.hpp  itemmap.hpp  itemmap.tcc  mmapfile.c  mmapfile.h  mmapfile.hpp  ngramstat.hpp  ngramstat.tcc  opt.sh  strreduction.cpp  strreduction.ggo  strreduction.hpp  strreduction_cmdline.c  strreduction_cmdline.h  text2ngram.cpp  text2ngram.ggo  text2ngram_cmdline.c  text2ngram_cmdline.h  tools.cpp  tools.hpp  unicode.hpp  vocab.cpp  vocab.hpp
tools/: build_jam.sh
